// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorBox basic snapshot render 1`] = `
<section
  className="sc-bdVaJa cIFhlI"
>
  <img
    src="test-file-stub"
  />
  <div
    className="red"
  >
    test_error
  </div>
</section>
`;

exports[`LoadingBox basic snapshot render 1`] = `
<section
  className="sc-bdVaJa cIFhlI"
>
  <img
    src="test-file-stub"
  />
  test_message
</section>
`;

exports[`NegativeBox basic snapshot render 1`] = `
<section
  className="sc-bdVaJa cIFhlI"
>
  <img
    src="test-file-stub"
  />
  <div
    className="e"
  >
    test_negative
  </div>
</section>
`;
